--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,6 @@
+/* FONT KANIT */
+@import url("https://fonts.googleapis.com/css2?family=Kanit:wght@400;500;600;700;800&display=swap");
+
 html,
 body {
   padding: 0;
@@ -21,8 +24,13 @@ a {
   }
   body {
     color: white;
-    background: #1d0021;
+    /* background: #1d0021; */
+    background: black;
   }
+}
+
+#kanit {
+  font-family: "Kanit", sans-serif;
 }
 
 /* TAILWIND CSS */
