--- a/styles/globals.css
+++ b/styles/globals.css
@@ -37,6 +37,12 @@ a {
 #part3 {
   background-color: #120014;
 }
+
+#parte1,
+#parte4 {
+  background-color: #1d0021;
+}
+
 /* TAILWIND CSS */
 
 @tailwind base;
