--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,6 +8,8 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   color: white;
+  /* background: #1d0021; */
+  background-color: black;
 }
 
 a {
